<?xml version="1.0"?>
<package>
  <name>cse_190_final</name>
    <version>4.2.0</version>
    <description>A Berry</description>

    <maintainer email="eltonchenec@gmail.com">Jesus</maintainer>


    <license>The License in which you need to give me 90% of the money you make if it is commercial. Otherwise if you use this code in things and modify it and it don't matter.</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>


    <export>
      <!-- Other tools can request additional information be placed here -->

    </export>
  </package>
